fixed z-index bug on locked.html

--- a/css/main.css
+++ b/css/main.css
@@ -15,6 +15,7 @@ body {
     top: 0;
     height: 60px;
     font-family: 'Open Sans Condensed', sans-serif;
+    z-index: 999;
 }
 a.fa.fa-home {       
     float: left;
@@ -242,4 +243,6 @@ button.fa.fa-refresh {
         font-size: 1.7em;
     }
 }
- 
+.ui-btn {
+    z-index: 1;
+}
